--- a/notes_app/src/index.css
+++ b/notes_app/src/index.css
@@ -1,3 +1,7 @@
+* {
+  box-sizing: border-box;
+}
+
 body {
   background-color: black;
   color: white;
@@ -15,7 +19,7 @@ main {
   background-color: hsl(0, 0%, 10%);
   padding: .5rem;
   display: grid;
-  grid-template-columns: repeat(3, 7rem);
+  grid-template-columns: repeat(3, 1fr);
   gap: .5rem;
   justify-content: center;
 }
@@ -23,11 +27,11 @@ main {
 .note {
   background-color: hsl(0, 0%, 16%);
   padding: .5rem;
-
   display: flex;
   flex-direction: column;
   gap: .5rem;
   justify-content: space-between;
+  width: 100%;
 }
 
 .new-note-form, .remove-all-selected-form {
