--- a/routing/src/index.css
+++ b/routing/src/index.css
@@ -1,8 +1,33 @@
 * {
   box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+}
+
+h1 {
+  text-align: center;
 }
 
 body {
   background-color: black;
   color: white;
+}
+
+main, nav {
+  padding: .5rem;
+}
+
+nav {
+  background-color: hsl(0, 0%, 10%);
+}
+
+nav ul {
+  list-style-type: none;
+  display: flex;
+  flex-wrap: wrap;
+  gap: .5rem;
+}
+
+.catalog-list {
+  padding-inline-start: 1rem;
 }
