--- a/catalog_stuff/src/css/index.css
+++ b/catalog_stuff/src/css/index.css
@@ -10,4 +10,25 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    gap: .5rem;
+}
+
+.book-card .book-image {
+    height: 5rem;
+}
+
+.catalog-controls {
+    background-color: hsl(0, 0%, 5%);
+    display: grid;
+    grid-template-columns: 4rem 8rem;
+    justify-content: center;
+    gap: .5rem;
+    padding-block: .5rem;
+}
+
+.catalog-controls label,
+.catalog-controls input,
+.catalog-controls option
+{
+    text-align: center;
 }
