--- a/context_demo/src/index.css
+++ b/context_demo/src/index.css
@@ -1,4 +1,31 @@
+* { margin: 0; }
+
 body {
   background-color: black;
   color: white;
 }
+
+html, body, #root { height: 100%; }
+#root {
+  display: flex;
+  flex-direction: column;
+}
+footer { margin-block-start: auto; }
+
+footer p {
+  text-align: center;
+  padding-block: 1em;
+}
+
+h1 {
+  text-align: center;
+  padding-block: 1em;
+}
+
+h2 {
+  padding-block: 1em;
+}
+
+#root { padding-inline: 2rem; }
+
+article { padding-block: 1em; }
